fix grid img gallery responsive on mobile

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -360,7 +360,6 @@ header {
 
     img {
         width: 100%;
-        height: 100%;
         display: block;
     }
 
